--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
         <div class="section">
             <h1>Download</h1>
-            <p>This game requires .NET 5.0 to play.</p>
+            <p><a href="play/">Play online</a></p>
             <p><a href="https://ineedauniqueusername.itch.io/project-timeless">Download on itch.io</a></p>
             <p><a href="https://github.com/Nostalgia-Navigator/Timeless">Source code on GitHub</a></p>
         </div>
