--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <div class="section">
             <h1>Download</h1>
             <p><a href="play/">Play online</a></p>
+            <p><a href="https://discord.gg/vHyjCYb">Join the Discord server</a></p>
             <p><a href="https://ineedauniqueusername.itch.io/project-timeless">Download on itch.io</a></p>
             <p><a href="https://github.com/Nostalgia-Navigator/Timeless">Source code on GitHub</a></p>
         </div>
