--- a/play/index.html
+++ b/play/index.html
@@ -113,7 +113,11 @@
 	</style>
 <link id='-gd-engine-icon' rel='icon' type='image/png' href='index.icon.png' />
 <link rel='apple-touch-icon' href='index.apple-touch-icon.png'/>
-
+    <meta property="og:title" content="Project Timeless - Wingnuts: Temporal Navigator"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nostalgia-navigator.github.io/play/" />
+    <meta property="og:image" content="https://nostalgia-navigator.github.io/play/index.icon.png" />
+    <meta property="og:description" content="Fan remake of the 2006 Mac OS X game by Freeverse, Inc" />
 </head>
 <body>
 	<canvas id='canvas'>
@@ -138,7 +142,7 @@
 	<script type='text/javascript' src='index.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":28271184,"index.wasm":17081267},"focusCanvas":true,"gdnativeLibs":[]};
+		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":32363776,"index.wasm":17081267},"focusCanvas":true,"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
 
 		(function() {
