--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <script type="text/javascript">
 
             let s = [
-                'Wingnuts: Nostalgia Navigator 3D',
+                'Wingnuts: Temporal Navigator',
             ]
             document.currentScript.outerHTML = 
 `<p id="subtitle">${s[Math.floor(Math.random() * s.length)]}</p>`
@@ -136,8 +136,8 @@
         <div style="height: 90px;"></div>
         <div class="section">
             <h1>Introduction</h1>
-            <p>Take the seat of an old, mustard-colored J35A Draken fighter jet and stop the nefarious, time-traveling Baron von Schtopwatch in this top-down shoot-em-up! Smash apart massive squadrons of historically-themed enemy planes, bomb the pesky ground units, and blow up the boss plane to advance to the next level! Just don't get blown up by the barrage of wacky bullets, and don't shoot the goodies!</p>
-            <p>Project Timeless is a fan remake of Wingnuts: Temporal Navigator with 3D graphics. It is made in Godot Engine and 100% free.</p>
+            <p>Take the seat of an old, mustard-colored J35A Draken fighter jet and stop the nefarious time-traveling Baron von Schtopwatch in this top-down shoot-em-up! Smash apart massive squadrons of historically-themed enemy planes, bomb the pesky ground units, and blow up the boss plane to advance to the next level! Just don't get blown up by the barrage of wacky bullets, and don't shoot the goodies!</p>
+            <p>Project Timeless is a fan remake of Freeverse Inc.'s <it>Wingnuts: Temporal Navigator</it> with 3D graphics. It is made in Godot Engine and 100% free.</p>
         </div>
         <div class="section">
             <h1>Background</h1>
